--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,9 @@
       <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
       <link rel="stylesheet" href="fonts/TT Norms Pro.css" />
       <link rel="stylesheet" href="fonts/TT Hoves.css" />
-      <title><%= htmlWebpackPlugin.options.title %></title>
+      <title>Pirosmani Vue 3</title>
    </head>
    <body>
-      <noscript>
-         <strong
-            >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-            properly without JavaScript enabled. Please enable it to
-            continue.</strong
-         >
-      </noscript>
       <div id="app"></div>
       <!-- built files will be auto injected -->
    </body>
